# BotTelegram

./: README.md
telegram-notification-bot/: .env  main.py  pyproject.toml
telegram-notification-bot/tests/: test_main.py
